# payroll-engine

./: .env.example  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  docker-compose.yml  event_schema.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security_report.md
.github/workflows/: ci.yml  publish.yml
demo/: .gitignore  Dockerfile  README.md  fly.toml
demo/api/: __init__.py  main.py  main_sqlite.py
demo/scripts/: reset.sh  seed.py  setup_db_roles.sql
demo/ui/: index.html
docs/: adoption_kit.md  compat.md  idempotency.md  index.md  non_goals.md  psp_invariants.md  public_api.md  threat_model.md  upgrading.md
docs/recipes/: README.md  batch_payroll_run.md  custom_provider.md  ledger_only.md
docs/rfcs/: README.md
docs/runbooks/: ai_advisories.md  funding_gate_blocks.md  replay_domain_events.md  returns.md  settlement_mismatch.md
examples/psp_minimal/: README.md  main.py
migrations/: 001_initial_schema.sql  202_payments_instructions.sql  204_liability_attribution.sql
phase1_pack/phase1_pack/: CODER_INSTRUCTIONS.md  README.md  ddl.sql
phase1_pack/phase1_pack/specs/: 01-state-machine.md  02-line-items.md  03-engine-contract.md  04-idempotency.md
phase1_pack_additions/: TEST_PLAN.md
phase1_pack_additions/fixtures/: README.md  seed_minimal.sql
phase1_pack_additions/migrations/: 001_add_statement_uniqueness.sql  002_add_idempotency_columns.sql  002_add_idempotent_line_items.sql  003_payment_batch_idempotency.sql  004_locking_columns_inputs.sql  005_immutability_triggers.sql
psp_build_pack_v2/psp_build_pack/: CODER_INSTRUCTIONS_PSP_BUILD.md  README.md
psp_build_pack_v2/psp_build_pack/docs/: ARCHITECTURE.md  OSS_CONTRIBUTING_GUIDE.md  ROADMAP.md
psp_build_pack_v2/psp_build_pack/migrations/: 201_psp_ledger_tables.sql  203_funding_requests.sql  205_domain_events.sql  206_impossible_state_constraints.sql
psp_build_pack_v2/psp_build_pack/specs/: 01_PSP_LEDGER_SCHEMA_AND_INVARIANTS.md  02_PAYMENTS_RAILS_ABSTRACTION_ACH_FEDNOW.md  03_SAFE_TO_COMMIT_FUNDING_GATE.md
psp_build_pack_v2/psp_build_pack/src/psp_ops/jobs/: reconcile_settlements.py
psp_build_pack_v2/psp_build_pack/src/psp_ops/providers/: ach_stub.py  base.py  fednow_stub.py
psp_build_pack_v2/psp_build_pack/src/psp_ops/services/: funding_gate.py  ledger_service.py  payment_orchestrator.py
psp_build_pack_v2/psp_build_pack/tests/psp_ops/: test_funding_gate.py  test_ledger_idempotency.py
scripts/: check_event_compat.py  init-db.sql  load_fixtures.py  migrate.py  seed_tax_rules.py
src/payroll_engine/: __init__.py  __main__.py  config.py  database.py
src/payroll_engine/api/: __init__.py  app.py  dependencies.py  schemas.py
src/payroll_engine/api/routes/: __init__.py  health.py  pay_runs.py
src/payroll_engine/calculators/: __init__.py  engine.py  line_builder.py  rate_resolver.py  tax_calculator.py  types.py
src/payroll_engine/models/: __init__.py  base.py  company.py  employee.py  gl.py  payments.py  payroll.py  psp.py
src/payroll_engine/psp/: __init__.py  cli.py  config.py  metrics.py  psp.py
src/payroll_engine/psp/ai/: __init__.py  _optional.py  base.py  counterfactual.py  decision_record.py  explanations.py  features.py  funding_risk.py  insights.py  return_advisor.py  return_codes.py  runbook_assistant.py  tenant_risk.py
src/payroll_engine/psp/ai/models/: __init__.py  rules_baseline.py
src/payroll_engine/psp/events/: __init__.py  emitter.py  store.py  types.py
src/payroll_engine/psp/providers/: __init__.py  ach_stub.py  base.py  fednow_stub.py
src/payroll_engine/psp/services/: __init__.py  funding_gate.py  ledger_service.py  liability.py  payment_orchestrator.py  reconciliation.py
src/payroll_engine/services/: __init__.py  commit_service.py  gl_service.py  locking_service.py  pay_run_service.py  payment_service.py  state_machine.py
tests/: __init__.py  conftest.py  test_engine.py  test_line_builder.py  test_rate_resolver.py  test_state_machine.py  test_tax_calculator.py
tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_approval_locks.py  test_commit_idempotency.py  test_golden_rules.py  test_immutability.py  test_preview_flow.py  test_reopen_flow.py  test_schema_sanity.py
tests/psp/: __init__.py  conftest.py  test_ai_advisory.py  test_ai_optionality.py  test_domain_events.py  test_funding_gate.py  test_invariant_properties.py  test_ledger_service.py  test_payment_orchestrator.py  test_providers.py  test_reconciliation.py  test_red_team_scenarios.py
